<resources>
    <string name="app_name">Sales_Person</string>
    <string name="menu">menu</string>
    <string name="search">search</string>
    <string name="admin">Admin</string>
    <string name="mytool">My Tool</string>
    <string name="ToolNameHint"> Write Tool Name</string>

    <string name="ToolPriceHint"> Enter Price  </string>

    <string name="ToolDescHint">  Tool Description</string>
    <string name="ToolType"> Tool Type </string>
    <string name="AddTool">Add</string>
    <string name="AddImages"> Add Images  </string>
    <string name="UserName">   Enter User Name  </string>
    <string name="AddPassword">  Enter Password </string>
    <string name="Login"> Login  </string>
    <string name="NewUser"> New User  </string>
    <string name="Email"> Enter Email</string>
    <string name="PhoneNumber">    Enter Phone Number</string>
    <string name="back">Back</string>
    <string name="AddForsell">    Add Tool For selling</string>
    <string name="AddNewUser"> Add new user</string>
    <string name="OffersNews">  Last Offers</string>
    <string name="no_search_result">  no search result   </string>
    <string name="nonetworkConnection"> No internet connection    </string>
    <string name="Emailu">  Email  </string>
    <string name="PhoneNumberu">   Phone number</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">Google map key</string>
    <string name="AddNewTool">Add Commission</string>
    <string name="MsgDonothaveOffers"> You didnot post any offer</string>
    <string name="RemoveOffer">  Remove Offer</string>
    <string name="RepeatPassword">      Enter password again</string>
    <string name="alerts">  Search Area</string>
    <string name="callus"> Call us  </string>
    <string name="separeteapp">  Share the App</string>
    <string name="rateapp">Rate the APP  </string>

    <string name="generldepartment"> Main debarment  </string>

    <string name="action_settings">Settings</string>
    <string name="sharemessage">Awesome App helps me to sell my tool i want to share it with you</string>
    <string name="GpsDistable">your GPS is Off you have to  run it before complete this process  </string>

    <string name="gpsoff"> GPS is off run it please then try again</string>
    <string name="offerdetails">Offer Details</string>
    <string name="addUser">Save </string>
    <string name="AddAllinfo">Enter All information</string>
    <string name="PasswordNotCorrect">Password does not match</string>
    <string name="EmailNotCorrect">Email is not correct</string>
    <string name="ClickToAddImages">Click  on picture to load your images  </string>
    <string name="OwnerLives">Tool  Owner is lining in this area </string>
    <string name="AddImagesPlease"> Add one image at least please</string>
    <string name="Edit">Edit Profile</string>
    <string name="Pop_ad_unit_id">ads key</string>


    <string-array name="Months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="Years_array">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>

    </string-array>
    <string name="UserId">Marya</string>
    <string name="Submit">submitCommission</string>
    <string name="South">South Sales Amount</string>
    <string name="Coastal">Coastal Sales Amount</string>
    <string name="North">North Sales amount</string>
    <string name="East">East Sales Amount</string>
    <string name="Lebanon">Lebanon Sales amount</string>
    <string name="AddCommission">addCommission</string>
    <string name="submitCom">submitCom</string>

</resources>
