<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControlPanel">

    <LinearLayout
        android:textDirection="rtl"
        android:background="@color/whitebackground"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TVfullNameWelcome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/UserId"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical"/>

        <LinearLayout
            android:layoutDirection="ltr"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:background="@color/whiteback"
            android:layout_weight="0"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">


            <Button
                android:id="@+id/button2"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:drawableRight="@drawable/newsa1"
                android:drawablePadding="8dp"

                android:onClick="editProfile"
                android:text="@string/Edit"
                android:textAlignment="textStart"
                android:textColor="@color/darkblue"
                android:textSize="12dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/Submit1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:drawableRight="@drawable/add1"
                android:drawablePadding="8dp"


                android:text="@string/AddNewTool"
                android:textAlignment="textStart"
                android:textColor="@color/darkblue"
                android:textSize="12dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/butAdmin"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:drawableRight="@drawable/home1"
                android:drawablePadding="8dp"

                android:onClick="adminPage"
                android:text="@string/admin"
                android:textAlignment="textStart"
                android:textColor="@color/darkblue"
                android:textSize="12dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/whiteback"
                android:drawableRight="@drawable/newsa1"
                android:drawablePadding="8dp"

                android:onClick="userReport"
                android:text="report"
                android:textAlignment="textStart"
                android:textColor="@color/darkblue"
                android:textSize="12dp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:layout_width="90dp"
            android:id="@+id/image_view"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

            <Button
                android:id="@+id/Submit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableRight="@drawable/ic_add_circle"
                android:text="@string/AddCommission"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="28dp"
                android:background="#9BE6D2"
                android:clickable="true"
                android:gravity="center"
                android:padding="16dp"
                android:textColor="#fff"
                android:onClick="addCommission"
                android:textSize="16dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>