<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCommission">

    <LinearLayout
        android:textDirection="rtl"
        android:background="@color/whitebackground"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TVfullNameWelcome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/UserId"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TVmainRegion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TVsalesPersonNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:gravity="left"
                android:text="SalesPerson Number:    5555"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerM"
                android:layout_width="match_parent"
                android:layout_height="64px"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinnerY"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>




        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/whitebackground">

            <LinearLayout

                android:id="@+id/CommData"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp">

                <LinearLayout
                    android:id="@+id/L1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:orientation="vertical"
                    android:paddingLeft="4dp"
                    android:paddingTop="4dp">


                    <LinearLayout
                        android:id="@+id/l2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:maxLength="25"
                        android:orientation="vertical"
                        android:touchscreenBlocksFocus="false">

                        <EditText
                            android:id="@+id/ESouth"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"

                            android:ems="10"
                            android:gravity="left"
                            android:hint="@string/South"
                            android:inputType="number"
                            android:maxLength="50"
                            android:paddingTop="9dp"
                            android:paddingBottom="9dp"
                            android:textColor="#ff1a102c"
                            android:textSize="18dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/l3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:orientation="vertical"
                        android:touchscreenBlocksFocus="false">

                        <EditText
                            android:id="@+id/ECoast"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"

                            android:ems="10"
                            android:gravity="left"
                            android:hint="@string/Coastal"
                            android:inputType="number"
                            android:maxLength="50"
                            android:paddingTop="9dp"
                            android:paddingBottom="9dp"
                            android:textColor="#ff1a102c"
                            android:textSize="18dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/l4"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:orientation="vertical"
                        android:touchscreenBlocksFocus="false">

                        <EditText
                            android:id="@+id/ENorth"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"

                            android:ems="10"
                            android:gravity="left"
                            android:hint="@string/North"
                            android:inputType="number"
                            android:maxLength="50"
                            android:paddingTop="9dp"
                            android:paddingBottom="9dp"
                            android:textAlignment="gravity"
                            android:textColor="#ff1a102c"
                            android:textSize="18dp" />

                        <EditText
                            android:id="@+id/EEast"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"

                            android:ems="10"
                            android:gravity="left"
                            android:hint="@string/East"
                            android:inputType="number"
                            android:maxLength="50"
                            android:paddingTop="9dp"
                            android:paddingBottom="9dp"
                            android:textAlignment="gravity"
                            android:textColor="#ff1a102c"
                            android:textSize="18dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/l5"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:orientation="vertical"
                        android:touchscreenBlocksFocus="false">

                        <EditText
                            android:id="@+id/Elebanon"
                            android:gravity="left"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/Lebanon"
                            android:inputType="number"
                            android:maxLength="15"
                            android:paddingTop="9dp"
                            android:paddingBottom="9dp"
                            android:textAlignment="gravity"
                            android:textColor="#ff1a102c"
                            android:textSize="18dp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layoutDirection="rtl"
                    android:orientation="vertical"
                    android:paddingRight="15dp">

                    <Button
                        android:id="@+id/BAddSubmission"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="0"
                        android:drawableRight="@drawable/add"
                        android:drawablePadding="4dp"
                        android:onClick="submit"
                        android:paddingRight="5dp"
                        android:text="@string/Submit"
                        android:textColor="#ff06071c" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>